--- a/utilities/src/main/res/values/strings.xml
+++ b/utilities/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
 
-    <string name="settings">Settings</string>
+    <string name="settings">Admin Settings</string>
     <string name="button_ok">Ok</string>
     <string name="status">Application Status</string>
     <string name="tap">(Please TAP to start/stop)</string>
