--- a/utilities/src/main/res/values/strings.xml
+++ b/utilities/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
     <string name="button_ok">Ok</string>
     <string name="status">Application Status</string>
     <string name="tap">(Please TAP to start/stop)</string>
+    <string name="icon_play">&#xf01d;</string>
 
 </resources>
